# GaoshouPlatform

./: .env.example  .gitignore  AGENTS.md  AKQuant-DSL-语法考古报告.md  Agent.md  README.md  data.py  factor_evaluation.py  factor_precompute.py  factor_value_store.py  factor_values.py  sync_service.py
backend/: README.md  _test_scan.py  _test_sector.py  _test_strategy.py  pyproject.toml  requirements.txt
backend/.opencode/skills/: xtquant-data-api.md
backend/app/: __init__.py  main.py  sync_main.py
backend/app/api/: __init__.py  akshare.py  backtest.py  data.py  data_explorer.py  data_skill.py  evaluation.py  factor.py  factor_research.py  factor_values.py  factors.py  features.py  grid_trading.py  indicator.py  live_trading.py  parquet_explorer.py  router.py  sentiment.py  small_cap_debug.py  strategy.py  sync.py  system.py
backend/app/backtest/: __init__.py  analyzers.py  api.py  config.py  event_driven.py  runner.py  strategy_loader.py  vectorized.py
backend/app/cache/: __init__.py  redis_cache.py
backend/app/compute/: __init__.py  api.py  cache.py  data_view.py  expression.py  scheduler.py
backend/app/core/: __init__.py  blocking.py  config.py  dev_data_mode.py  logging.py  retry.py  scheduler.py
backend/app/data_stores/: __init__.py  base.py  clickhouse_indicator_store.py  clickhouse_store.py  factory.py  indicator_base.py  parquet_indicator_store.py  parquet_store.py
backend/app/db/: __init__.py  clickhouse.py  duckdb.py  sqlite.py
backend/app/engines/: __init__.py  factor_engine.py  qmt_gateway.py  vn_engine.py
backend/app/indicators/: __init__.py  base.py  growth.py  liquidity.py  momentum.py  quality.py  scheduler.py  technical.py  theme.py  valuation.py  volatility.py
backend/app/models/: __init__.py  factor.py
backend/app/scripts/: __init__.py  audit_frontend_backend_gaps.py  batch_indicator_redis.py  build_minute_cum_timer_parquet.py  clean_minute_parquet_dates.py  cleanup_parquet_temp_dirs.py  compact_jq_minute_duckdb.py  compact_parquet_dataset.py  compare_small_cap_logs.py  compute_minute_indicators.py  create_dev_sample_data.py  export_clickhouse_to_parquet.py  fill_small_cap_missing_data.py  import_jq_minute_archives.py  (+17 more)
backend/tests/: test_factor_backtest.py  test_factor_models.py  test_factor_templates.py  test_factor_validator.py  test_retry.py
(+324 files in other folders)
