# backend/pyproject.toml
[project]
name = "gaoshou-platform"
version = "0.1.0"
description = "量化投研平台后端服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "hiredis>=2.0.0",
    "apscheduler>=3.10.0",
    "clickhouse-driver>=0.2.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "loguru>=0.7.0",
    "akquant>=0.2.26",
    "tushare>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "B008", "B023", "B904", "E402", "E701", "E741", "N806", "N807", "N817", "N818", "UP035"]

[tool.ruff.lint.per-file-ignores]
"app/backtest/engine/__init__.py" = ["F401"]
"app/backtest/engine/akquant/engine.py" = ["F821"]
"app/backtest/engine/akquant/normalizer.py" = ["F821"]
"app/engines/qmt_gateway.py" = ["F402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
